assets/css/style.css
.result {
    float: left;
    margin: 10px;
    clear: right;
}

#lookup {
    margin: auto;
    width: 200px;
}

.anime {
    margin: 5px;
    background-color: turquoise;
    font-weight: bold;
}

#searchInstruction {
    font-size: large;
    font-weight: bold;
    color: blue;
    margin: auto;
}

#find-anime {
    background-color: turquoise;
    font-weight: bold;
    margin-left: 65px;
}

#animeSearch {
    margin-left: 12px;
}

p {
    text-align: center;
    font-weight: bold;
    color: blue;
    font-size: 20px;
    text-transform: uppercase;
}

.gif {
    margin: 5px;
    border: solid red 1px;
}

